cnsrc/apps/perfsonar/overlays/dev/patch-svc-perfsonar.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: jupyterhub
#   name: proxy-public
#   namespace: jupyterhub
# spec:
#   ports:
#     - name: http
#       port: 80
#       targetPort: http
#   selector:
#     app: jupyterhub
#     component: proxy
#     release: jupyterhub
#   type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: perfsonar
spec:
  type: ClusterIP
  externalTrafficPolicy: null
